k8s/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lastmission-backend
  namespace: lastmission
spec:
  type: ClusterIP
  selector:
    app: lastmission-backend
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
