k8s/backend/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lastmission-api
  namespace: lastmission
spec:
  hostnames:
    - lastmission-api.example.com
  parentRefs:
    - name: example-gateway
      namespace: gateway-system
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: lastmission-backend
          port: 80
